# f-menu

./: main.py  pyproject.toml
templates/: index.html
