[tool.poetry]
name = "f-menu"
version = "0.1.0"
description = "Build phase"
authors = ["Saurav Sawant <1498saurav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
